@@ -189,8 +189,8 @@ err_t             netconn_connect (struct netconn *conn,
 err_t             netconn_disconnect (struct netconn *conn);
 err_t             netconn_listen_with_backlog(struct netconn *conn, u8_t backlog);
 #define netconn_listen(conn) netconn_listen_with_backlog(conn, TCP_DEFAULT_LISTEN_BACKLOG)
-struct netconn *  netconn_accept  (struct netconn *conn);
-struct netbuf *   netconn_recv    (struct netconn *conn);
+err_t             netconn_accept  (struct netconn *conn, struct netconn **new_conn);
+err_t             netconn_recv    (struct netconn *conn, struct netbuf **buf);
 err_t             netconn_sendto  (struct netconn *conn,
                                    struct netbuf *buf, struct ip_addr *addr, u16_t port);
 err_t             netconn_send    (struct netconn *conn,
